# spec/openapi.yml
@@ -73,50 +73,13 @@ paths:
               style: simple
               schema: 
                 type: string
+                format: uri
         '400':
           "$ref": "#/components/responses/BadRequest"
         '401':
           "$ref": "#/components/responses/Unauthorized"
         '403':
           "$ref": "#/components/responses/Unauthorized"
-  "/merch/{merchId}/status":
-    patch:
-      tags:
-      - merch
-      summary: Update the status of a piece of merch
-      operationId: updateMerchStatus
-      security:
-      - bearerAuth: []
-      parameters:
-      - name: merchId
-        in: path
-        description: id of the merch
-        required: true
-        schema:
-          type: integer
-          format: int32
-      requestBody:
-        content:
-          application/json:
-            schema:
-              required:
-                - status
-              type: object
-              properties:
-                status:
-                  type: string
-                  description: Status that the merch must be updated to
-      responses:
-        '200':
-          description: OK
-        '400':
-          "$ref": "#/components/responses/BadRequest"
-        '401':
-          "$ref": "#/components/responses/Unauthorized"
-        '403':
-          "$ref": "#/components/responses/Unauthorized"
-        '404':
-          "$ref": "#/components/responses/NotFound"
   "/merch/{merchId}":
     get:
       tags:
@@ -129,8 +92,8 @@ paths:
         description: id of the merch
         required: true
         schema:
-          type: integer
-          format: int32
+          type: string
+          format: uuid
       responses:
         '200':
           description: OK
@@ -153,7 +116,8 @@ paths:
         description: id of the merch
         required: true
         schema:
-          type: integer
+          type: string
+          format: uuid
       requestBody:
         content:
           application/json:
@@ -187,7 +151,8 @@ paths:
         description: id of the merch
         required: true
         schema:
-          type: integer
+          type: string
+          format: uuid
       requestBody:
         content:
           application/json:
@@ -221,10 +186,51 @@ paths:
         description: id of the merch
         required: true
         schema:
-          type: integer
+          type: string
+          format: uuid
       responses:
         '204':
           description: Deleted
+        '400':
+          "$ref": "#/components/responses/BadRequest"
+        '401':
+          "$ref": "#/components/responses/Unauthorized"
+        '403':
+          "$ref": "#/components/responses/Unauthorized"
+        '404':
+          "$ref": "#/components/responses/NotFound"
+
+  "/merch/{merchId}/status":
+    post:
+      tags:
+      - merch
+      summary: Update the status of a piece of merch
+      operationId: updateMerchStatus
+      security:
+      - bearerAuth: []
+      parameters:
+      - name: merchId
+        in: path
+        description: id of the merch
+        required: true
+        schema:
+          type: string
+          format: uuid
+      requestBody:
+        content:
+          application/json:
+            schema:
+              required:
+                - status
+              type: object
+              properties:
+                status:
+                  type: string
+                  enum: [LOADED, OPEN, SOLD_OUT]
+                  description: Status that the merch must be updated to
+      responses:
+        '200':
+          description: OK
         '400':
           "$ref": "#/components/responses/BadRequest"
         '401':
@@ -276,6 +282,7 @@ components:
           format: int64
         status:
           type: string
+          enum: [LOADED, OPEN, SOLD_OUT]
           description: Status the merch is in
         title:
           type: string
